# rag-quality-lab

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ask.py  pyproject.toml  report.md  requirements.txt  run_matrix.py
.github/workflows/: ci.yml
data/: eval_set.json
data/corpus/: http-caching.md  message-queue.md  mysql-index.md  vector-search.md
lab/: __init__.py  evaluate.py  llm_extras.py
product/: Dockerfile  README.md  docker-compose.yml  start.sh
product/backend/: chunking.py  config.py  database.py  document_processor.py  index.py  llm_service.py  main.py  requirements.txt  retrieval.py  test_api.py
product/frontend/: index.html  package.json
product/frontend/src/: App.jsx
tests/: test_lab.py
